#976 Fix header too short [SEAR-31]

--- a/src/main/webapp/less/SearchDataGrid.less
+++ b/src/main/webapp/less/SearchDataGrid.less
@@ -185,7 +185,7 @@
 							}
 						}
 						.headerTh {
-							height: 96px;
+							min-height: 96px;
 							padding: 4px 10px;
 							position: relative;
 							background: #000000;
